opam-version: "2.0"

name: "SourCIL"
version: "0.1"
license: "GPL3"

maintainer: "Nicolas Jeannerod nicolas.jeannerod@irif.fr"
authors: "Nicolas Jeannerod nicolas.jeannerod@irif.fr"

homepage: "https://github.com/colis-anr/sourcil"
bug-reports: "https://github.com/colis-anr/sourcil/issues"
dev-repo: "https://github.com/colis-anr/sourcil"

build: [
  ["dune" "build" "-p" name "-j" jobs]
]
